done and dusted!

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,13 @@
   <body>
     <div>
       <h2>TICTACTOE</h2>
+      <div class="gameDiv"></div>
+      <div id="controls">
+        <input type="text" id="player1" placeholder="name1" />
+        <input type="text" id="player2" placeholder="name2" />
+        <button id="startBtn">start</button>
+        <button id="restartBtn">restart</button>
+      </div>
     </div>
   </body>
 </html>
